# greengrass-ipc

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/: PLAN.md
.opencode/skills/greengrass-ipc-dev/: SKILL.md
.opencode/skills/greengrass-ipc-dev/reference/: WIRE_PROTOCOL.md
examples/: defer_component_update.rs  update_state.rs
examples/docker/: .env.example  .gitignore  README.md  docker-compose.yml  recipe.json  run-demo.sh  teardown.sh
examples/docker/component/: Cargo.toml
examples/docker/component/src/: main.rs
scripts/: check.sh
src/: client.rs  connection.rs  env.rs  error.rs  lib.rs
src/eventstream/: headers.rs  message.rs  mod.rs
src/model/: config.rs  iotcore.rs  lifecycle.rs  mod.rs  pubsub.rs
tests/: integration.rs
tests/support/: mod.rs
