# Standalone demo component that uses greengrass-ipc from crates.io.
# `[workspace]` makes this its own workspace so it does not get pulled into the
# parent greengrass-ipc crate.
[workspace]

[package]
name = "greengrass-ipc-demo"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
greengrass-ipc = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
